--- a/toDoList.html
+++ b/toDoList.html
@@ -8,8 +8,8 @@
 <body>
 <div class="flex-container-column">
     <h1 class="heading">Список задач</h1>
-	<form class="flex-container-row" action="http://127.0.0.1:3000/items" method="POST">
-		 <input name="input_text" class="form-input" type="text">
+	<form class="flex-container-row">
+		 <input name="task" class="form-input" type="text">
 		 <select name="priority" class="form-priority-selector"> 
 			 <option>High</option>
 			 <option>Medium</option>
@@ -32,11 +32,11 @@
 	</div>
 	
 	<ol class="todolist">
-		 <li class="task flex-container-row">
+		 <li class="task flex-container-row" id="0">
 			 <label class="task-text">Купить пингвина</label>
-			 <input class="task-done-checkbox" type="checkbox">
-			 <input class="task-cancel-checkbox" type="checkbox">
-			 <input class="task-button-delete" type="image" src="resourses/images/button_delete.png">
+			 <input class="task-button task-button-done" type="image" src="resourses/images/button_done.png">
+			 <input class="task-button task-button-cancel" type="image" src="resourses/images/button_cancel.png">
+			 <input class="task-button task-button-delete" type="image" src="resourses/images/button_delete.png">
 			 <label class="task-creation-date">20/15/2015 23:13</label>
 			 <label class="task-result-date">Cancelled at 21/15/2015 23:10</label>
 		 </li>
