--- a/toDoList.html
+++ b/toDoList.html
@@ -8,7 +8,7 @@
 <body>
 <div class="flex-container-column">
     <h1 class="heading">Список задач</h1>
-	<form class="flex-container-row">
+	<form name="addForm" class="flex-container-row">
 		 <input name="task" class="form-input" type="text">
 		 <select name="priority" class="form-priority-selector"> 
 			 <option>High</option>
@@ -32,14 +32,6 @@
 	</div>
 	
 	<ol class="todolist">
-		 <li class="task flex-container-row" id="0">
-			 <label class="task-text">Купить пингвина</label>
-			 <input class="task-button task-button-done" type="image" src="resourses/images/button_done.png">
-			 <input class="task-button task-button-cancel" type="image" src="resourses/images/button_cancel.png">
-			 <input class="task-button task-button-delete" type="image" src="resourses/images/button_delete.png">
-			 <label class="task-creation-date">20/15/2015 23:13</label>
-			 <label class="task-result-date">Cancelled at 21/15/2015 23:10</label>
-		 </li>
 	</ol>
 </div>
 
