--- a/toDoList.html
+++ b/toDoList.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" href="toDoList.css" type="text/css">
 </head>
 <body>
-<div class="flex-container-column">
+<div class="main-frame">
     <h1 class="heading">Список задач</h1>
-	<form name="addForm" class="flex-container-row">
-		 <input name="task" class="form-input" type="text">
+	<form name="addForm" class="form">
+		 <input name="text" class="form-input" type="text">
 		 <select name="priority" class="form-priority-selector"> 
 			 <option>High</option>
 			 <option>Medium</option>
@@ -17,10 +17,10 @@
 		 </select>
 		 <input class="form-button-add" type="image" src="resourses/images/button_add.png">
 	</form>
-
-	<div class="flex-container-row">
+	<div class="filters">
 		<div class="priorityfilters">
 			 <input class="filter-checkbox" type="checkbox" id="filter-done" onchange="filterList();"><label class="checkbox-label" for="filter-done">Done</label>
+			 <input class="filter-checkbox" type="checkbox" id="filter-canceled" onchange="filterList();"><label class="checkbox-label" for="filter-canceled">Canceled</label>
 			 <input class="filter-checkbox" type="checkbox" id="filter-high" onchange="filterList();"><label class="checkbox-label" for="filter-high">High</label>
 			 <input class="filter-checkbox" type="checkbox" id="filter-medium" onchange="filterList();"><label class="checkbox-label" for="filter-medium">Medium</label>
 			 <input class="filter-checkbox" type="checkbox" id="filter-low" onchange="filterList();"><label class="checkbox-label" for="filter-low">Low</label>
