--- a/toDoList.html
+++ b/toDoList.html
@@ -19,11 +19,11 @@
 	</form>
 	<div class="filters">
 		<div class="priorityfilters">
-			 <input class="filter-checkbox" type="checkbox" id="filter-done" onchange="filterList();"><label class="checkbox-label" for="filter-done">Done</label>
-			 <input class="filter-checkbox" type="checkbox" id="filter-canceled" onchange="filterList();"><label class="checkbox-label" for="filter-canceled">Canceled</label>
-			 <input class="filter-checkbox" type="checkbox" id="filter-high" onchange="filterList();"><label class="checkbox-label" for="filter-high">High</label>
-			 <input class="filter-checkbox" type="checkbox" id="filter-medium" onchange="filterList();"><label class="checkbox-label" for="filter-medium">Medium</label>
-			 <input class="filter-checkbox" type="checkbox" id="filter-low" onchange="filterList();"><label class="checkbox-label" for="filter-low">Low</label>
+			 <input class="filter-result" type="checkbox" id="filter-done" onchange="filterList();"><label class="checkbox-label" for="filter-done">Done</label>
+			 <input class="filter-result" type="checkbox" id="filter-canceled" onchange="filterList();"><label class="checkbox-label" for="filter-canceled">Canceled</label>
+			 <input class="filter-priority" type="checkbox" id="filter-high" onchange="filterList();"><label class="checkbox-label" for="filter-high">High</label>
+			 <input class="filter-priority" type="checkbox" id="filter-medium" onchange="filterList();"><label class="checkbox-label" for="filter-medium">Medium</label>
+			 <input class="filter-priority" type="checkbox" id="filter-low" onchange="filterList();"><label class="checkbox-label" for="filter-low">Low</label>
 		</div>
 		<div class="datefilter">
 		     <input class="datefilter-button-sort" type="image" id="datefilter" src="resourses/images/button_sort.png" onclick="sortByDate(); return false;">
